properly set min-samda1g and min-samda1j from samda1g-rt and samda1j-rt respectively and fix resulting compile errors

--- a/hal/Cargo.toml
+++ b/hal/Cargo.toml
@@ -184,9 +184,9 @@ samda1 = ["device"] # Convenience feature for shared configuration of samda1 chi
 samda1e = ["atsamda1e", "samda1"]
 samda1e-rt = ["samda1e", "atsamda1e/rt"]
 samda1g = ["atsamda1g", "samda1"]
-samda1g-rt = ["samda1g", "atsamda1g/rt"]
+samda1g-rt = ["samda1g", "atsamda1g/rt", "min-samda1g"]
 samda1j = ["atsamda1j", "samda1"]
-samda1j-rt = ["samda1j", "atsamda1j/rt"]
+samda1j-rt = ["samda1j", "atsamda1j/rt", "min-samda1j"]
 samd11 = ["device"] # Convenience feature for shared configuration of samd11 chips.
 samd11c = ["atsamd11c", "samd11"]
 samd11c-rt = ["samd11c", "atsamd11c/rt"]
