--- a/hal/Cargo.toml
+++ b/hal/Cargo.toml
@@ -1,12 +1,7 @@
 [package]
 name = "atsamd-hal"
 version = "0.15.0"
-authors = [
-    "Wez Furlong <wez@wezfurlong.org>",
-    "Paul Sajna <sajattack@gmail.com>",
-    "Michael van Niekerk <mvniekerk@gmail.com>",
-    "Jesse Braham <jesse@beta7.io>",
-]
+authors = ["Wez Furlong <wez@wezfurlong.org>", "Paul Sajna <sajattack@gmail.com>", "Michael van Niekerk <mvniekerk@gmail.com>", "Jesse Braham <jesse@beta7.io>"]
 description = "HAL and Peripheral access API for ATSAMD11, ATSAMD21/ATSAMDA1, ATSAMD51, ATSAME51, ATSAME53 and ATSAME54 microcontrollers"
 keywords = ["no-std", "arm", "cortex-m", "embedded-hal"]
 categories = ["embedded", "hardware-support", "no-std"]
@@ -180,19 +175,19 @@ device = []
 # Bypasses compile-time checks that a specific device is enabled.
 library = []
 
-samda1 = ["device"] # Convenience feature for shared configuration of samda1 chips.
+samda1 = ["device"]                                     # Convenience feature for shared configuration of samda1 chips.
 samda1e = ["atsamda1e", "samda1"]
 samda1e-rt = ["samda1e", "atsamda1e/rt"]
 samda1g = ["atsamda1g", "samda1"]
 samda1g-rt = ["samda1g", "atsamda1g/rt", "min-samda1g"]
 samda1j = ["atsamda1j", "samda1"]
 samda1j-rt = ["samda1j", "atsamda1j/rt", "min-samda1j"]
-samd11 = ["device"] # Convenience feature for shared configuration of samd11 chips.
+samd11 = ["device"]                                     # Convenience feature for shared configuration of samd11 chips.
 samd11c = ["atsamd11c", "samd11"]
 samd11c-rt = ["samd11c", "atsamd11c/rt"]
 samd11d = ["atsamd11d", "samd11"]
 samd11d-rt = ["samd11d", "atsamd11d/rt"]
-samd21 = ["device"] # Convenience feature for shared configuration of samd21 chips.
+samd21 = ["device"]                                     # Convenience feature for shared configuration of samd21 chips.
 samd21e = ["atsamd21e", "samd21"]
 samd21e-rt = ["samd21e", "atsamd21e/rt"]
 samd21el = ["samd21e"]
@@ -203,7 +198,7 @@ samd21gl = ["samd21g"]
 samd21gl-rt = ["samd21g-rt", "samd21gl"]
 samd21j = ["atsamd21j", "samd21", "min-samd21j"]
 samd21j-rt = ["samd21j", "atsamd21j/rt"]
-samd51 = ["device"] # Convenience feature for shared configuration of samd51 chips.
+samd51 = ["device"]                                     # Convenience feature for shared configuration of samd51 chips.
 samd51g = ["atsamd51g", "samd51", "min-samd51g"]
 samd51g-rt = ["samd51g", "atsamd51g/rt"]
 samd51j = ["atsamd51j", "samd51", "min-samd51j"]
@@ -212,19 +207,19 @@ samd51n = ["atsamd51n", "samd51", "min-samd51n"]
 samd51n-rt = ["samd51n", "atsamd51n/rt"]
 samd51p = ["atsamd51p", "samd51", "min-samd51p"]
 samd51p-rt = ["samd51p", "atsamd51p/rt"]
-same51 = ["device"] # Convenience feature for shared configuration of same51 chips
+same51 = ["device"]                                     # Convenience feature for shared configuration of same51 chips
 same51g = ["atsame51g", "same51", "min-samd51g"]
 same51g-rt = ["same51g", "atsame51g/rt"]
 same51j = ["atsame51j", "same51", "min-samd51j"]
 same51j-rt = ["same51j", "atsame51j/rt"]
 same51n = ["atsame51n", "same51", "min-samd51n"]
 same51n-rt = ["same51n", "atsame51n/rt"]
-same53 = ["device"] # Convenience feature for shared configuration of same53 chips
+same53 = ["device"]                                     # Convenience feature for shared configuration of same53 chips
 same53j = ["atsame53j", "same53", "min-samd51j"]
 same53j-rt = ["same53j", "atsame53j/rt"]
 same53n = ["atsame53n", "same53", "min-samd51n"]
 same53n-rt = ["same53n", "atsame53n/rt"]
-same54 = ["device"] # Convenience feature for shared configuration of same54 chips
+same54 = ["device"]                                     # Convenience feature for shared configuration of same54 chips
 same54n = ["atsame54n", "same54", "min-samd51n"]
 same54n-rt = ["same54n", "atsame54n/rt"]
 same54p = ["atsame54p", "same54", "min-samd51p"]
